--- a/index.css
+++ b/index.css
@@ -1,8 +1,70 @@
+ .top-menu {
+  position: relative;
+  background-color: darkgrey;
+  width: 100%;
+  z-index: 5;
+ }
  row {
     display: inline-block;
+    padding: 10px;
+    margin: 20px;
     border: 3px solid;
-    padding: 5px;
-    margin: 5px;
+    border-radius: 10%;
     font-weight: bold;
     font-family: Monaco;
+    background-color: lightgery;
     }
+  .banner {
+      width: 100%;
+      }
+  .header {
+        text-align: center;
+        font-family: Monaco;
+        font-size: 32px;
+        font-weight: bold;
+        position: relative;
+      }
+  .welcome {
+        border-top: 2px dotted lightgrey;
+        border-bottom: 2px dotted lightgrey;
+        padding: 5px;
+        border-left: none;
+        border-right: none;
+         }
+      p {
+         text-align: center;
+          font-family: Monaco;
+          font-size: 25px;
+          font-weight: bold;
+          margin: 70px;
+          color: black;
+      }
+      
+ .questions {
+           text-align: center;
+           font-family: Monaco;
+           font-size: 23px;
+           color: lightseagreen;
+           font-weight: bold;
+           margin: 40px;
+           position: sticky;
+           top: 40px;
+           border: 15px solid #DBE9EE;
+           background-color: white;
+           }
+
+       .answers {
+          border: 1px solid lightseagreen;
+          font-family: Monaco;
+          font-size: 28px; 
+          text-align: center;
+          padding: 15px;
+          margin: 15px;
+          color: lightseagreen;
+          font-weight: bold;
+          overflow: hidden;
+          }
+          answer:hover {
+  background: #C0D6DF;
+  color: #FFF;
+}
