--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
  .top-menu {
-  position: relative;
-  background-color: darkgrey;
-  width: 100%;
-  z-index: 5;
+    ccposition: relative;
+     background-color: darkgrey;
+    width: 100%;
+    z-index: 5;
+    text-align: center;
  }
+
  row {
     display: inline-block;
     padding: 10px;
@@ -12,59 +14,81 @@
     border-radius: 10%;
     font-weight: bold;
     font-family: Monaco;
-    background-color: lightgery;
+    background-color: lightgrey;
     }
+
   .banner {
       width: 100%;
       }
-  .header {
-        text-align: center;
-        font-family: Monaco;
-        font-size: 32px;
-        font-weight: bold;
-        position: relative;
-      }
-  .welcome {
-        border-top: 2px dotted lightgrey;
-        border-bottom: 2px dotted lightgrey;
-        padding: 5px;
-        border-left: none;
-        border-right: none;
-         }
-      p {
-         text-align: center;
-          font-family: Monaco;
-          font-size: 25px;
-          font-weight: bold;
-          margin: 70px;
-          color: black;
-      }
-      
- .questions {
-           text-align: center;
-           font-family: Monaco;
-           font-size: 23px;
-           color: lightseagreen;
-           font-weight: bold;
-           margin: 40px;
-           position: sticky;
-           top: 40px;
-           border: 15px solid #DBE9EE;
-           background-color: white;
-           }
 
-       .answers {
-          border: 1px solid lightseagreen;
-          font-family: Monaco;
-          font-size: 28px; 
-          text-align: center;
-          padding: 15px;
-          margin: 15px;
-          color: lightseagreen;
-          font-weight: bold;
-          overflow: hidden;
+  .header {
+    font-size: 32px;
+    font-weight: bold;
+    position: relative;
+        }
+
+  .welcome {
+     text-align: center;
+     font-family: Century Gothic;
+     font-size: 32px;
+     font-weight: bold;
+     margin: 70px;
+     color: black;
+     border-top: 3px dotted lightgrey;
+     border-bottom: 2px dotted lightgrey;
+     padding: 5px;
+     border-left: none;
+     border-right: none;
+     position: relative;
+  }
+
+  .welcome-color {
+     color:darkslategrey
           }
-          answer:hover {
-  background: #C0D6DF;
-  color: #FFF;
-}
+        
+ .parahraph {
+    text-align: center;
+    font-family: Century Gothic;
+    font-size: 25px;
+    opacity: 0;
+    }
+
+  .sticky-border {
+    margin: 40px;
+    position: sticky;
+    top: 40px;
+    border: 15px solid #DBE9EE;
+    background-color: white;
+           }
+      
+   .questions {
+     text-align: center;
+     font-family: Monaco;
+     font-size: 23px;
+     color: lightseagreen;
+     font-weight: bold;
+           }
+   p {
+     color: black;
+     }
+
+  .answers {
+      border: 1px solid lightseagreen;
+      font-family: Monaco;
+      font-size: 28px; 
+      text-align: center;
+      padding: 15px;
+      margin: 15px;
+      color: lightseagreen;
+      font-weight: bold;
+          }
+
+   footer {
+       background-color: #DBE9EE;
+       text-align: center;
+            }
+
+    answer:hover {
+      background: #C0D6DF;
+      color: #FFFF
+            }
