--- a/index.css
+++ b/index.css
@@ -1,4 +1,44 @@
-.background-image {
+* {
+  margin: 0;
+  padding: 0;
+}
+.navigation {
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  margin: 0;
+  padding: 18px;
+  background-color: #333;
+  color: white;
   width: 100%;
-  height: 650px;
+  position: absolute;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+}
+.navigation ul {
+  list-style-type: none;
+  display: flex;
+  padding: 20;
+  justify-content: space-between;
+  align-items: center;
+}
+.navigation li {
+  padding-right: 17px;
+}
+
+.navigation .left {
+  display: flex;
+  justify-content: space-between;
+}
+.navigation .right {
+  display: flex;
+  justify-content: flex-end;
+}
+.navigation ul li:hover {
+  content: pointer;
+  align-items: center;
+  color: #3577E3;
+}
+.kg {
+  font-size: 25px;
 }
