--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@
    }
    html, body {
     height: 100%;
+    width: 100%;
+    overflow-x: hidden;
    }
    /*navigation-bar-section*/
    
@@ -50,6 +52,7 @@
    }
    
    /*banner-section*/
+
    .image-banner {  
      width: 100%;
      display: flex;
@@ -60,15 +63,36 @@
    }
    .photo-yurt {
     background-image: url(resources/images/IMG_3667.JPG);
-    height: 960px;
+    height: 1000px;
     width: 100%;
     background-size: 100%;
     background-repeat: no-repeat;
+  
    }
    .photo-mountain {
-    background-image: url(resources/images/IMG_3689.JPG);
-    height: 960px;
+    background-image: url(resources/images/IMG_3690.JPG);
+    height: 1000px;
     width: 100%;
     background-size: 100%;
     background-repeat: no-repeat;
    }
+   h1 {
+    text-overflow: initial;
+    position: relative;
+    text-align:justify;
+    top: 50%;
+    text-transform: uppercase;
+    font-family: "Titan One", sans-serif;
+    font-weight: 600;
+    letter-spacing: 4px;
+  }
+  .photo-right {
+    color: #f3940f;
+    text-align: center;
+  }
+
+  .photo-left {
+    color:bisque;
+    text-align: center;
+  }
+  
