--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ h1 {
  top: 50%;
  text-transform: uppercase;
  font-family: "Space Mono", monospace;
- font-weight: bolder;
+ font-weight: 700;
  font-style: italic;
  letter-spacing: 4px;
 }
@@ -100,15 +100,20 @@ h1 {
  text-align: center;
 }
 header, h1 {
- padding-top: 15px;
+ padding-top: 30px;
  text-align: center;
- font-family: "Space Mono", monospace;
+ font-family: "Fjalla One", sans-serif;
  font-weight: 400;
 
 }
 p {
  padding-top: 15px;
  font-size: 18px;
+}
+#scroll-right{
+  text-align: left;
+  top: 45px;
+  position: relative;
 }
 /*scrollable-images*/
 .scrollable-images {
