--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@ h1 {
  text-align:justify;
  top: 50%;
  text-transform: uppercase;
- font-family: "Space Mono", monospace;
+ font-family: "Space-mono" monospace;
  font-weight: 700;
  font-style: italic;
  letter-spacing: 4px;
@@ -102,7 +102,7 @@ h1 {
 header, h1 {
  padding-top: 30px;
  text-align: center;
- font-family: "Fjalla One", sans-serif;
+ font-family: "Space Mono", monospace;
  font-weight: 400;
 
 }
@@ -113,9 +113,12 @@ p {
 #scroll-right{
   text-align: left;
   top: 45px;
+  padding-left: 5px;
   position: relative;
 }
+
 /*scrollable-images*/
+
 .scrollable-images {
  display: flex;
  position: relative;
@@ -140,5 +143,24 @@ p {
   flex-shrink: 0; 
   object-fit: cover;
   border-radius: 4px;
+}
+
+/*Top destination section*/
+
+.destinations {
+   text-decoration: none;
+   font-family: "Space Mono", monospace;
+}
+ h2 {
+  margin-top: 30px;
+  font-family: "Space Mono", monospace;
+}
+.destinations ul {
+  font-size: 20px;
+}
+#bishkek-city-img {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
 }
   
