--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ html, body {
 h1 {
  text-overflow: initial;
  position: relative;
- text-align:justify;
+ text-align: justify;
  top: 50%;
  text-transform: uppercase;
  font-family: "Space-mono" monospace;
@@ -154,13 +154,54 @@ p {
  h2 {
   margin-top: 30px;
   font-family: "Space Mono", monospace;
+  padding-bottom: 25px;
+  padding-left: 10px;
 }
 .destinations ul {
   font-size: 20px;
+  padding: 25px 0px;
 }
-#bishkek-city-img {
-  width: 100%;
+.bishkek-city {
+  justify-content: space-between;
+  display: flex;
+}
+.bishkek-city img {
+  width: 350px;
   height: 350px;
+  padding: 10px;
+  margin-left: 10px;
   object-fit: cover;
+  text-align: left;
+  color: bisque;
+  background-color: rgb(228, 220, 209);
+  border-radius: 3px;
+  justify-content: space-between;
+  display: flex;
 }
+.bishkek-li {
+  padding: 15px 10px;
+}
+.bishkek-city p ,img{
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+.bishkek-city p {
+  /*right: 42%;*/
+  /*bottom: 60%;*/
+  max-width: 50%;
+}
+
+  .bishkek-city .bishkek-button {
+    display: block; /* Make the button a block element */
+    margin-top: 15px; /* Space between the paragraph text and button */
+    padding: 10px 15px; /* Padding inside the button */
+    font-size: 16px; /* Font size for the button text */
+    cursor: pointer;
+    background-color: #3577E3;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    text-align: center;
+  }
   
