--- a/index.css
+++ b/index.css
@@ -168,10 +168,10 @@ ul h3 {
 /*Bishkek-section*/
 
 .bishkek-city {
-  display: flex;
-  align-items: center ;
   padding-bottom: 10px;
+  display: flex;
   justify-content: center;
+  align-items: center;
 }
 .bishkek-city img {
   width: 300px;
@@ -181,20 +181,19 @@ ul h3 {
   object-fit: cover;
   color: bisque;
   background-color: rgb(228, 220, 209);
-  border-radius: 3px;
+  
 }
 .bishkek-li {
   padding: 15px 10px;
 }
-.bishkek-city p ,img{
-  justify-content: center;
-}
-.bishkek-city p {
+.bishkek-p {
   padding: 10px;
   background-color: white;
+  text-align: center;
+  
 }
 
-  .bishkek-button {
+  .bishkek-p button{
     display: inline-block; 
     margin-top: 15px; 
     padding: 10px 15px; 
@@ -205,9 +204,7 @@ ul h3 {
     border: none;
     border-radius: 4px;
     position: relative;
-    height: 40px;
-    top: 58%;
-    right: 615px;
+    text-align: center;
   }
   .bishkek-button:hover {
     content: pointer;
@@ -216,40 +213,44 @@ ul h3 {
   /*Issyk-kul-section*/
 
   .issyk-kul {
-    justify-content: space-between;
-    display: flex;
-    border-bottom: dotted 2px black;
-    border-bottom-width: 25;
     padding-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .issyk-kul img {
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     padding: 10px;
     margin-left: 10px;
     object-fit: cover;
-    text-align: left;
     color: bisque;
     background-color: rgb(228, 220, 209);
-    border-radius: 3px;
-    justify-content: space-between;
-    display: flex;
   }
   .issyk-kul-li {
     padding: 15px 10px;
   }
-  .issyk-kul p, img {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
+  .issyk-kul-p {
+   padding: 10px;
+   background-color: white;
+   text-align: center;
   }
-  .issyk-kul p {
-    max-width: 50%;
-    padding: 10px; 
-    margin-right: 10px;
+  .issyk-kul-p button {
+    display: inline-block; 
+    margin-top: 15px; 
+    padding: 10px 15px; 
+    font-size: 16px; 
+    cursor: pointer;
+    background-color: rgb(192, 186, 186);
+    color: white;
+    border: none;
+    border-radius: 4px;
     position: relative;
-    flex: 1; 
-    right: 350px;
+    text-align: center;
+  }
+  button:hover {
+    content: pointer;
+    color: #3577E3
   }
   p h4 {
     position: relative;
