--- a/index.css
+++ b/index.css
@@ -506,7 +506,7 @@ ul h3 {
 
 /*footer-section*/
 footer {
-  background-color: aqua;
+  background-color: rgb(68, 149, 196);
   padding-top: 25px;
   padding-bottom: 25px;
   padding-left: 15px;
