--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ html, body {
   text-decoration: none;
   margin: 0;
   padding: 18px;
-  background-color: aqua;
+  background-color: rgb(68, 149, 196);
   color: grey;
   width: 100%;
   position: fixed;
