--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ html, body {
   margin: 0;
   padding: 18px;
   background-color: rgb(68, 149, 196);
-  color: grey;
+  color: whitesmoke;
   width: 100%;
   position: fixed;
   justify-content: space-between;
