--- a/index.css
+++ b/index.css
@@ -514,4 +514,15 @@ footer {
   font-family: "Space Mono", monospace;
   font-size: 20px;
 }
+.copyright{
+  padding-right: 20px;
+}
+.footer-left {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  padding-right: 15px;
+  bottom: 40%;
+  
+}
   
